--- a/src/SFA.DAS.ProviderRelationships.Web/Views/Shared/_GoogleAnalyticsInfo.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/Shared/_GoogleAnalyticsInfo.cshtml
@@ -1,5 +1,4 @@
-﻿@using System.Web.UI.WebControls
-<script>
+﻿<script>
     window.dataLayer = window.dataLayer || [];
     dataLayer.push({
         'event': 'dataLoaded',
