--- a/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/AccountProvidersWithMultipleOrganisation.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/AccountProvidersWithMultipleOrganisation.cshtml
@@ -1,6 +1,10 @@
 ﻿@model SFA.DAS.ProviderRelationships.Web.ViewModels.AccountProviders.AccountProvidersViewModel
 @using SFA.DAS.ProviderRelationships.Web.RouteValues.AccountProviderLegalEntities
 
+@{
+    var isOwner = EmployerAccountAuthorizationHandler.IsEmployerAuthorised(AuthorizationContext, EmployerUserAuthorisationRole.Owner);
+}
+
 @foreach (var accountProvider in Model.AccountProviders)
 {
     <h2 class="govuk-heading-l govuk-!-margin-top-7">@accountProvider.ProviderName</h2>
@@ -9,7 +13,7 @@
             <tr class="govuk-table__row">
                 <th class="govuk-table__header" scope="col">Organisation</th>
                 <th class="govuk-table__header" scope="col">Permissions</th>
-                @if ((await AuthorizationService.AuthorizeAsync(User, PolicyNames.HasEmployerOwnerAccount)).Succeeded)
+                @if (isOwner)
                 {
                     <th class="govuk-table__header" scope="col">
                         <span class="govuk-visually-hidden">Action</span>
@@ -18,42 +22,42 @@
             </tr>
         </thead>
         <tbody class="govuk-table__body">
-        @foreach (var accountProviderLegalEntity in accountProvider.AccountLegalEntities)
-        {
-            <tr class="govuk-table__row">
-                <td class="govuk-table__cell das-table-cell-width-30">@accountProviderLegalEntity.Name</td>
-                <td class="govuk-table__cell das-table-cell-width-50">
-                    @if (!accountProviderLegalEntity.HadPermissions)
-                    {
-                        @:No permissions set
-                    }
-                    else
-                    {
-                        <ul class="govuk-list govuk-!-margin-bottom-0">
-                        @foreach (var permission in accountProviderLegalEntity.Operations.ToPermissions())
+            @foreach (var accountProviderLegalEntity in accountProvider.AccountLegalEntities)
+            {
+                <tr class="govuk-table__row">
+                    <td class="govuk-table__cell das-table-cell-width-30">@accountProviderLegalEntity.Name</td>
+                    <td class="govuk-table__cell das-table-cell-width-50">
+                        @if (!accountProviderLegalEntity.HadPermissions)
                         {
-                            <li>@permission.ToString()</li>
+                            @:No permissions set
                         }
-                        </ul>
-                    }
-                </td>
-                @if ((await AuthorizationService.AuthorizeAsync(User, PolicyNames.HasEmployerOwnerAccount)).Succeeded)
-                {
-                    <td class="govuk-table__cell govuk-table__cell--numeric das-table-cell-width-20">
-                        <a class="govuk-link govuk-link--no-visited-state" href="@Url.Action("Permissions", "AccountProviderLegalEntities", new AccountProviderLegalEntityRouteValues { AccountProviderId = accountProvider.Id, AccountLegalEntityId = accountProviderLegalEntity.Id })">
-                            @if (!accountProviderLegalEntity.HadPermissions)
-                            {
-                                <span>Set permissions<span class="govuk-visually-hidden"> for @accountProvider.ProviderName on behalf of @accountProviderLegalEntity.Name</span></span>
-                            }
-                            else
-                            {
-                                <span>Change permissions<span class="govuk-visually-hidden"> for @accountProvider.ProviderName on behalf of @accountProviderLegalEntity.Name</span></span>
-                            }
-                        </a>
+                        else
+                        {
+                            <ul class="govuk-list govuk-!-margin-bottom-0">
+                                @foreach (var permission in accountProviderLegalEntity.Operations.ToPermissions())
+                                {
+                                    <li>@permission.ToString()</li>
+                                }
+                            </ul>
+                        }
                     </td>
-                }
-            </tr>
-        }
+                    @if (isOwner)
+                    {
+                        <td class="govuk-table__cell govuk-table__cell--numeric das-table-cell-width-20">
+                            <a class="govuk-link govuk-link--no-visited-state" href="@Url.Action("Permissions", "AccountProviderLegalEntities", new AccountProviderLegalEntityRouteValues { AccountProviderId = accountProvider.Id, AccountLegalEntityId = accountProviderLegalEntity.Id })">
+                                @if (!accountProviderLegalEntity.HadPermissions)
+                                {
+                                    <span>Set permissions<span class="govuk-visually-hidden"> for @accountProvider.ProviderName on behalf of @accountProviderLegalEntity.Name</span></span>
+                                }
+                                else
+                                {
+                                    <span>Change permissions<span class="govuk-visually-hidden"> for @accountProvider.ProviderName on behalf of @accountProviderLegalEntity.Name</span></span>
+                                }
+                            </a>
+                        </td>
+                    }
+                </tr>
+            }
         </tbody>
     </table>
 }
