--- a/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/Index.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/Index.cshtml
@@ -1,6 +1,9 @@
 ﻿@model SFA.DAS.ProviderRelationships.Web.ViewModels.AccountProviders.AccountProvidersViewModel
 @using Microsoft.AspNetCore.Mvc.TagHelpers
-@using SFA.DAS.ProviderRelationships.Web.Authorisation
+
+@{
+    var isOwner = EmployerAccountAuthorizationHandler.IsEmployerAuthorised(AuthorizationContext, EmployerUserAuthorisationRole.Owner);
+}
 
 @{
     ViewBag.Title = "Your training providers";
@@ -35,7 +38,7 @@
             <p class="govuk-body">You have not added any training providers yet.</p>
         }
 
-        @if ((await AuthorizationService.AuthorizeAsync(User, PolicyNames.HasEmployerOwnerAccount)).Succeeded)
+        @if (isOwner)
         {
             <a class="govuk-button" href="@Url.Action("Find")" role="button">Add a training provider</a>
         }
