--- a/src/SFA.DAS.ProviderRelationships.Web/Views/_ViewImports.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
+@using SFA.DAS.ProviderRelationships.Web.Authorisation
 @using SFA.DAS.ProviderRelationships.Configuration
 @using SFA.DAS.ProviderRelationships.Web
 @using SFA.DAS.ProviderRelationships.Web.Extensions
@@ -8,5 +9,5 @@
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
-@inject IEmployerAccountAuthorizationHandler EmployerAccountAuthorizationHandler
+@inject IEmployerAccountAuthorisationHandler EmployerAccountAuthorizationHandler
 @inject AuthorizationHandlerContext AuthorizationContext
