--- a/src/SFA.DAS.ProviderRelationships.Web/Views/Shared/Components/AccountProvidersWithMultipleOrganisation/Default.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/Shared/Components/AccountProvidersWithMultipleOrganisation/Default.cshtml
@@ -3,7 +3,7 @@
 @using SFA.DAS.ProviderRelationships.Web.RouteValues.AccountProviderLegalEntities
 
 @{
-    var isOwner = EmployerAccountAuthorizationHandler.CheckUserAccountAccess(AuthorizationContext.User, EmployerUserRoles.Owner);
+    var isOwner = EmployerAccountAuthorizationHandler.CheckUserAccountAccess(AuthorizationContext.User, EmployerUserRole.Owner);
 }
 
 @foreach (var accountProvider in Model.AccountProviders)
