--- a/src/SFA.DAS.ProviderRelationships.Web/Views/_ViewImports.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/_ViewImports.cshtml
@@ -6,6 +6,7 @@
 @using SFA.DAS.Validation.Mvc
 @using Microsoft.AspNetCore.Authorization
 @using SFA.DAS.ProviderRelationships.Web.Authorisation
+@using SFA.DAS.ProviderRelationships.Web.Authorisation.Handlers
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
