Fixing links and actions

--- a/src/SFA.DAS.ProviderRelationships.Web/Views/Shared/Components/AccountProvidersWithMultipleOrganisation/Default.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/Shared/Components/AccountProvidersWithMultipleOrganisation/Default.cshtml
@@ -1,6 +1,5 @@
 ﻿@using SFA.DAS.ProviderRelationships.Authorization
 @model SFA.DAS.ProviderRelationships.Web.ViewModels.AccountProviders.AccountProvidersViewModel
-@using SFA.DAS.ProviderRelationships.Web.RouteValues.AccountProviderLegalEntities
 
 @{
     var isOwner = EmployerAccountAuthorizationHandler.CheckUserAccountAccess(User, EmployerUserRole.Owner);
@@ -45,7 +44,7 @@
                     @if (isOwner)
                     {
                         <td class="govuk-table__cell govuk-table__cell--numeric das-table-cell-width-20">
-                            <a class="govuk-link govuk-link--no-visited-state" href="@Url.Action("Permissions", "AccountProviderLegalEntities", new AccountProviderLegalEntityRouteValues { AccountProviderId = accountProvider.Id, AccountLegalEntityId = accountProviderLegalEntity.Id })">
+                            <a class="govuk-link govuk-link--no-visited-state" asp-controller="AccountProviderLegalEntities" asp-action="Permissions" asp-route-accountHashedId="@Model.AccountHashedId" asp-route-accountProviderId="@accountProvider.Id" asp-route-accountLegalEntityId="@accountProviderLegalEntity.Id">
                                 @if (!accountProviderLegalEntity.HadPermissions)
                                 {
                                     <span>Set permissions<span class="govuk-visually-hidden"> for @accountProvider.ProviderName on behalf of @accountProviderLegalEntity.Name</span></span>
