--- a/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviderLegalEntities/Confirm.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviderLegalEntities/Confirm.cshtml
@@ -11,17 +11,19 @@
 }
 
 @section breadcrumb
-{
+    {
     <a class="das-js-back-link">Back</a>
 }
 
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-        <partial name="_ValidationSummary" model="ViewData.ModelState"/>
+        <partial name="_ValidationSummary" model="ViewData.ModelState" />
 
-        @using (Html.BeginForm(new {action = $"{ViewContext.RouteData.Values[RouteValueKeys.AccountHashedId]}/providers/{ViewContext.RouteData.Values[RouteValueKeys.AccountProviderId]}/legalentities/{ViewContext.RouteData.Values[RouteValueKeys.AccountLegalEntityId]}/confirm", controller = "AccountProviderLegalEntities"}))
-        {
-            @Html.AntiForgeryToken()
+        <form asp-controller="AccountProviderLegalEntities"
+              asp-action="Confirm"
+              asp-route-AccountHashedId="@ViewContext.RouteData.Values[RouteValueKeys.AccountHashedId]"
+              asp-route-AccountProviderId="@ViewContext.RouteData.Values[RouteValueKeys.AccountProviderId]"
+              asp-route-AccountLegalEntityId="@ViewContext.RouteData.Values[RouteValueKeys.AccountLegalEntityId]">
 
             <fieldset class="govuk-fieldset">
                 <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
@@ -38,8 +40,8 @@
                             <strong class="govuk-warning-text__text">
                                 <span class="govuk-warning-text__assistive">Warning</span>
                                 All adverts will be transferred from @Model.AccountProvider.ProviderName after you turn off their permissions.
-                                <br/>
-                                <br/>
+                                <br />
+                                <br />
                                 Adverts pending review will be sent back to draft. Any live adverts will be closed. You will be able to clone closed adverts if you want to republish them.
                             </strong>
                         </div>
@@ -68,12 +70,12 @@
                     <div class="govuk-summary-list__row">
                         <dt class="govuk-summary-list__key">Add apprentice records</dt>
                         <dd class="govuk-summary-list__value">@Model.Permissions[0].Status()</dd>
-                        <dd class="govuk-summary-list__actions"><input class="govuk-link govuk-button--looks-like-link" type="submit" value="Change" name="command"/></dd>
+                        <dd class="govuk-summary-list__actions"><input class="govuk-link govuk-button--looks-like-link" type="submit" value="Change" name="command" /></dd>
                     </div>
                     <div class="govuk-summary-list__row">
                         <dt class="govuk-summary-list__key">Recruit apprentices</dt>
                         <dd class="govuk-summary-list__value">@Model.Permissions[1].Status()</dd>
-                        <dd class="govuk-summary-list__actions"><input class="govuk-link govuk-button--looks-like-link" type="submit" value="Change" name="command"/></dd>
+                        <dd class="govuk-summary-list__actions"><input class="govuk-link govuk-button--looks-like-link" type="submit" value="Change" name="command" /></dd>
                     </div>
                 </dl>
 
@@ -120,6 +122,6 @@
             @Html.HiddenFor(m => m.IsProviderBlockedFromRecruit)
 
             <button class="govuk-button" type="submit">Confirm</button>
-        }
+        </form>
     </div>
 </div>
