--- a/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviderLegalEntities/Permissions.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviderLegalEntities/Permissions.cshtml
@@ -17,11 +17,13 @@
 
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-        <partial name="_ValidationSummary" model="ViewData.ModelState"/>
+        <partial name="_ValidationSummary" model="ViewData.ModelState" />
 
-        @using (Html.BeginForm(new { action = $"{ViewContext.RouteData.Values[RouteValueKeys.AccountHashedId]}/providers/{ViewContext.RouteData.Values[RouteValueKeys.AccountProviderId]}/legalentities/{ViewContext.RouteData.Values[RouteValueKeys.AccountLegalEntityId]}", controller = "AccountProviderLegalEntities" }))
-        {
-            @Html.AntiForgeryToken()
+        <form asp-controller="AccountProviderLegalEntities"
+              asp-action="Permissions"
+              asp-route-AccountHashedId="@ViewContext.RouteData.Values[RouteValueKeys.AccountHashedId]"
+              asp-route-AccountProviderId="@ViewContext.RouteData.Values[RouteValueKeys.AccountProviderId]"
+              asp-route-AccountLegalEntityId="@ViewContext.RouteData.Values[RouteValueKeys.AccountLegalEntityId]">
 
             <fieldset class="govuk-fieldset">
                 <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
@@ -116,6 +118,6 @@
             @Html.HiddenFor(m => m.IsProviderBlockedFromRecruit)
 
             <button class="govuk-button" type="submit">Continue</button>
-        }
+        </form>
     </div>
 </div>
